# flower-app

./: Procfile  README.md  pyproject.toml
app/: celery.py  setup.py
scripts/dyno/: flower.sh
src/app/: celery.py
src/scripts/: build_creds.py
