[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jefer94 <jdefreitaspinto@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.13"
amqp = "^5.3.1"
celery = "^5.4.0"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
